welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value int
  int aDiff = Math.abs(a - 10);
  ^close10:3: error: not found: value int
  int bDiff = Math.abs(b - 10);
  ^close10:5: error: not found: value aDiff
  if (aDiff < bDiff) {
      ^close10:5: error: not found: value bDiff
  if (aDiff < bDiff) {
              ^close10:8: error: not found: value bDiff
  if (bDiff < aDiff) {
      ^close10:8: error: not found: value aDiff
  if (bDiff < aDiff) {
              ^close10:8: error: type mismatch;
 found   : Unit
 required: Int
  if (bDiff < aDiff) {
  ^